@@ -220,12 +220,7 @@ void BackgroundParser::run()
 	    lock();
 	    Unit* unit = parseFile( fileName, contents );
 	    QValueList<Problem> problems = unit->problems;
-#ifdef AST_DEBUG
-	    TranslationUnitAST* ast = unit->translationUnit;
-	    if( ast )
-		printDeclarations( ast );
-#endif
-	    
+
 	    m_unitDict.remove( fileName );
 	    m_unitDict.insert( fileName, unit );
 
