@@ -19,6 +19,7 @@
 #include "store_walker.h"
 #include "ast.h"
 #include "ast_utils.h"
+#include "realtime_classbrowser.h"
 
 #include <qheader.h>
 #include <qmessagebox.h>
@@ -118,14 +119,15 @@ CppSupportPart::CppSupportPart(QObject *parent, const char *name, const QStringL
     m_problemReporter = new ProblemReporter( this );
     mainWindow( )->embedOutputView( m_problemReporter, i18n("Problems"), i18n("problem reporter"));
     
-#ifdef AST_DEBUG
-    m_astView = new KListView();
-    m_astView->setSorting( -1 );
-    m_astView->addColumn( "" );
-    m_astView->header()->hide();
-    mainWindow()->embedSelectViewRight( m_astView, i18n("AST Debug"), i18n("Show the AST for the current translation unit") );
-    connect( m_astView, SIGNAL(executed(QListViewItem*)), this, SLOT(slotNodeSelected(QListViewItem*)) );
-#endif
+    m_structureView = new KListView();
+    QFont f = m_structureView->font();
+    f.setPointSize( 8 );
+    m_structureView->setFont( f );
+    m_structureView->setSorting( -1 );
+    m_structureView->addColumn( "" );
+    m_structureView->header()->hide();
+    mainWindow()->embedSelectViewRight( m_structureView, i18n("File Structure"), i18n("Show the structure for the current source unit") );
+    connect( m_structureView, SIGNAL(executed(QListViewItem*)), this, SLOT(slotNodeSelected(QListViewItem*)) );
 
     connect( core(), SIGNAL(configWidget(KDialogBase*)),
              m_problemReporter, SLOT(configWidget(KDialogBase*)) );
@@ -210,16 +212,12 @@ CppSupportPart::~CppSupportPart()
     
     mainWindow( )->removeView( m_pCHWidget );
     mainWindow( )->removeView( m_problemReporter );
-#ifdef AST_DEBUG
-    mainWindow()->removeView( m_astView );
-#endif
-    
+    mainWindow()->removeView( m_structureView );
+
     delete m_backgroundParser;
     delete m_pParser;
     delete m_pCompletion;
-#ifdef AST_DEBUG
-    delete m_astView;
-#endif
+    delete m_structureView;
 
     delete m_pCCParser;
     delete m_pCHWidget;
@@ -241,21 +239,15 @@ void CppSupportPart::customEvent( QCustomEvent* ev )
 	    const Problem& p = *it++;
 	    m_problemReporter->reportError( p.text(), fileName, p.line(), p.column() );
 	}
-	
-#ifdef AST_DEBUG
-	m_astView->clear();
-	
+
 	if( fileName == m_activeFileName ){
-	    AST* ast = m_backgroundParser->translationUnit( fileName );
+	    TranslationUnitAST* ast = m_backgroundParser->translationUnit( fileName );
 	    if( ast ){
-		m_astView->clear();
-		QListViewItem* root = new KListViewItem( m_astView, QFileInfo(fileName).fileName() );
-		root->setExpandable( true );
-		root->setOpen( true );
-		buildView( ast, m_activeEditor, root );
+	        RTClassBrowser b( fileName, m_structureView );
+		b.parseTranslationUnit( ast );
 	    }
 	}
-#endif	
+
 	m_backgroundParser->unlock();
     } else if( ev->type() == Event_FileParsed ){
 	FileParsedEvent* event = (FileParsedEvent*) ev;
